# nlp

./: attn.ipynb  backprop.ipynb  cnn.ipynb  pyproject.toml  rnn.ipynb  rnn_attention.ipynb  transformer.ipynb
