[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["ziegnes <ziegnes@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.23.3"
ipywidgets = "^8.0.6"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
